--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vtex.store-graphql": "2.x",
-    "vtex.css-handles": "0.x"
+    "vtex.css-handles": "0.x",
+    "vtex.styleguide": "9.x"
   },
   "registries": [
     "smartcheckout"
